fix: correcting chakra-ui style overshoot on small devices display

--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -24,6 +24,6 @@
     }
 
     @include smallDevice {
-        display: none;
+        display: none !important;
     }
 }
